@@ -1,3 +1,8 @@
+(06/09/16)
+==========
+
+· Fix issues and improve games section. Raspberry Pi 3 ready.
+
 (05/09/16)
 ==========
 
